[package]
name = "assignment_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version="0.21.3",features=["rand-std","bitcoin_hashes"]}
rand = "0.8.5"
rust-crypto = "0.2.36"
rust-base58 = "0.0.4"
openssl = "0.10.28"
rsa = "0.5.0"